--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
 <!-- <app-hand-writ-medicine></app-hand-writ-medicine> -->
 <!-- <app-details-medicine-take></app-details-medicine-take> -->
 <app-hand-writ-reminder></app-hand-writ-reminder>
+<app-hand-writ-reminder></app-hand-writ-reminder>
 <!-- <app-activity-reminders></app-activity-reminders> -->
 <app-search-medicine></app-search-medicine>
 
