--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -1,52 +1,23 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+ 
  <div style=" width: 300px;  ">
-    <div style="  width:550px; margin-left: 500px; margin-top: 150px;">
-
-<!-- <table style="width: 450px; " mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
-  <ng-container matColumnDef="position">
-   
-    <th style="color: white;" mat-header-cell *matHeaderCellDef> No. </th>
-    <td style="color: white;" mat-cell *matCellDef="let element"> {{element.position}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="name">
-    <th style="color: white;" mat-header-cell *matHeaderCellDef> Name </th>
-    <td style="color: white;" mat-cell *matCellDef="let element"> {{element.name}} </td>
-  </ng-container>
-
-
-  <ng-container matColumnDef="weight">
-    <th style="color: white;" mat-header-cell *matHeaderCellDef> Weight </th>
-    <td style="color: white;" mat-cell *matCellDef="let element"> {{element.weight}} </td>
-  </ng-container>
-
-  <ng-container matColumnDef="symbol">
-    <th style="color: white;" mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td style="color: white;" mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-  </ng-container>
-
-  <tr style="color: white;" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr style="color: white;" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table> -->
-
-
-
-
-
-
+    <div style="  width:550px; margin-left: 500px; margin-top: 200px;">
+    
 <body>
-
 <section>
-  <h1>Table Fixed</h1>
   <div class="tbl-header">
     <table cellpadding="0" cellspacing="0">
       <thead>
         <tr>
-          <th>NO</th>
-          <th>NAMA</th>
-          <th>Alamat</th>
-          <th>Status</th>
-          <th>Telp</th>
+          <th>פירוט</th>
+          <th>עריכה/עצירה</th>
+          <!-- <th>עריכה</th> -->
+          <th>ימים שנותרו</th>
+          <th>התזכורת הבאה</th>
+          <th>שם תרופה</th>
         </tr>
       </thead>
     </table>
@@ -56,228 +27,82 @@
       <tbody>
         <tr>
           <td>1</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
+          <td>
+             <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+             <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+          </td>
+          <td>2</td>
+          <td>16:15</td>
+          <td>Acamol</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
+          <td>
+            <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+            <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+          </td>
+          <td>5</td>
+          <td>18:00</td>
+          <td>Acamol</td>
         </tr>
         <tr>
           <td>3</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>3</td>
           <td>078546521</td>
         </tr>
         <tr>
           <td>4</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>6</td>
           <td>024584544</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>12</td>
           <td>081231544</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>9</td>
           <td>082154325</td>
         </tr>
         <tr>
           <td>7</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>3</td>
           <td>078546521</td>
         </tr>
         <tr>
           <td>8</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>1</td>
           <td>024584544</td>
         </tr>
         <tr>
           <td>9</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>6</td>
           <td>081231544</td>
         </tr>
         <tr>
           <td>10</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
+          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
+          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
+          <td>4</td>
           <td>082154325</td>
         </tr>
-        <tr>
-          <td>11</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td>12</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
-        <tr>
-          <td>13</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
-        </tr>
-        <tr>
-          <td>14</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
-        </tr>
-        <tr>
-          <td>15</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td>16</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
-        <tr>
-          <td>17</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
-        </tr>
-        <tr>
-          <td>18</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
-        </tr>
-        <tr>
-          <td>19</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td>20</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
-        <tr>
-          <td>21</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
-        </tr>
-        <tr>
-          <td>22</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
-        </tr>
-        <tr>
-          <td>23</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td>24</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
-        <tr>
-          <td>25</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
-        </tr>
-        <tr>
-          <td>26</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
-        </tr>
-        <tr>
-          <td>27</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td></td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
-        <tr>
-          <td>28</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-          <td>Nikah</td>
-          <td>081231544</td>
-        </tr>
-        <tr>
-          <td>29</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-          <td>Pelajar</td>
-          <td>082154325</td>
-        </tr>
-        <tr>
-          <td>30</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          <td>Nikah</td>
-          <td>078546521</td>
-        </tr>
-        <tr>
-          <td>31</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          <td>Pelajar</td>
-          <td>024584544</td>
-        </tr>
+      
+
       </tbody>
     </table>
   </div>
