--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
@@ -1,53 +1,48 @@
 <div  style="width: 300px;  "class="example-button-row" >
-<div style="  width:550px; height: 720px; margin: auto; margin-left: 510px; margin-top: 100px; ">
+<div style="  width:550px; margin: auto; margin-left: 510px; margin-top: 100px; ">
 
-    <div  style="margin-left:170px; "  class="form__group field">
-        <input style="width: 200px; text-align: right;" type="text" class="form__field" placeholder="שם התרופה" name="NameMedicine" id='namemedicine' required />
-        <label style="color: white; margin-left: 135px; " for="namemedicine" class="form__label">שם התרופה</label>
-    </div>
+    <div  style=" margin-left:135px; margin-top: -30px;"  class="form__group field">
+        <input style="width: 250px; text-align: right; " type="text" class="form__field" placeholder="שם התרופה" name="NameMedicine" id='namemedicine' required />
+        <label style="color: white; margin-left: 175px;  " for="namemedicine" class="form__label">שם התרופה</label>
+    </div><br>
 
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px; text-align: right;" type="text" class="form__field" placeholder=" שם הפציינט" name="NamePatient" id='namepatient' required />
-        <label style="color: white; margin-left: 135px;" for="namepatient" class="form__label">שם הפציינט</label>
-    </div>
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder=" שם הפציינט" name="NamePatient" id='namepatient' required />
+        <label style="color: white; margin-left: 175px;  " for="namepatient" class="form__label">שם הפציינט</label>
+    </div><br>
 
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="תאריך התחלה" name="Date" id='date' required />
-        <label style="color: white; margin-left: 123px;" for="date" class="form__label">תאריך התחלה</label>
-    </div>
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px ; text-align: right;" type="text" class="form__field" placeholder="תאריך התחלה" name="Date" id='date' required />
+        <label style="color: white; margin-left: 160px;" for="date" class="form__label">תאריך התחלה</label>
+    </div><br>
 
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="מינון" name="Minun" id='Minun' required />
-        <label style="color: white; margin-left: 175px;" for="Minun" class="form__label">מינון</label>
-    </div>
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px ; text-align: right;" type="text" class="form__field" placeholder="מינון" name="Minun" id='Minun' required />
+        <label style="color: white; margin-left: 220px;" for="Minun" class="form__label">מינון</label>
+    </div><br>
 
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="מספר ימים" name="NumDate" id='numdate' required />
-        <label style="color: white; margin-left: 140px;" for="numdate" class="form__label">מספר ימים</label>
-    </div>
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px ; text-align: right;" type="text" class="form__field" placeholder="מספר ימים" name="NumDate" id='numdate' required />
+        <label style="color: white; margin-left: 180px;" for="numdate" class="form__label">מספר ימים</label>
+    </div><br>
 
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder=" תדירות ביום" name="Frequency" id='frequency' required />
-        <label style="color: white; margin-left: 133px;" for="frequency" class="form__label">תדירות ביום</label>
-    </div>
-
-<!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
-
-<!-- <div style="margin-left:170px;" class="form__group field">
-    <input style="width: 200px ;" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
-    <label style="color: white;" for="alarm‏" class="form__label">התראה</label>
-</div> -->
-
-    <div style="margin-left:170px;" class="form__group field">
-        <label style="color: white; font-size: 13px; margin-left: 7px;"> האם התרופה תסתיים בתום השימוש</label>
-        <input style=" margin-left:55px; " type="checkbox" class="form__field" name="Frequency" id='frequency' required /> 
-    </div>
-
-    <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder=" תאריך תפוגה" name="EndDate" id='enddate' required />
-        <label style="color: white; margin-left: 127px;" for="enddate" class="form__label">תאריך תפוגה</label>
-    </div>
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px ; text-align: right;" type="text" class="form__field" placeholder=" תדירות ביום" name="Frequency" id='frequency' required />
+        <label style="color: white; margin-left: 172px;" for="frequency" class="form__label">תדירות ביום</label>
+    </div><br>
 
 
+    <div style="margin-left:135px;" class="form__group field">
+        <input style="width: 250px ; text-align: right;" type="text" class="form__field" placeholder=" תאריך תפוגה" name="EndDate" id='enddate' required />
+        <label style="color: white; margin-left: 165px;" for="enddate" class="form__label">תאריך תפוגה</label>
+    </div><br>
+
+
+    <div style="margin-left:150px;" class="form__group field">
+        <label style="color: white; font-size: 15px;  font-family: 'Varela Round';"> האם התרופה תסתיים בתום השימוש</label>
+        
+    </div>  
+    <input style="margin-left: auto;"  type="checkbox" class="form__field" name="Frequency" id='frequency' required /> 
+   <span class="arrow-alt-left"> </span>
 </div>
 </div>
