--- a/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
+++ b/src/app/components/hand-writ-reminder/hand-writ-reminder.component.html
@@ -1,21 +1,36 @@
-<p>hand-writ-reminder works!</p>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+
+
 <div  style="width: 300px;  "class="example-button-row" >
-    <div style="  width:550px; height: 720px; margin: auto; margin-left: 510px; margin-top: 100px; ">
-    
-  <!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
-    
-    <!-- <div style="margin-left:170px;" class="form__group field">
-        <input style="width: 200px ;" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
-        <label style="color: white;" for="alarm‏" class="form__label">התראה</label>
-    </div> -->        
-    
-        <div style="margin-left:170px;" class="form__group field">
-            <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="שם התזכורת " name="ReminderName" id='ReminderName' required />
-            <label style="color: white; margin-left: 123px;" for="date" class="form__label">שם התזכורת</label>
+    <div style="  width:550px; margin: auto; margin-left: 500px; margin-top: 100px; ">
+
+        <div  style=" margin-left:135px; margin-top: 150px;"  class="form__group field">
+            <input style="width: 250px; text-align: right; " type="text" class="form__field" placeholder="שם תזכורת" name="ReminderName" id='reminderName' required />
+            <label style="color: white; margin-left: 180px;  " for="reminderName" class="form__label">שם תזכורת</label>
         </div>
+        
+        <br> <br> <br> <br>
+
+          <!-- ליצור פור שלפי התדירות ביום יפתח ההתראות -->
     
-    
-    
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
+            <label style="color: white; margin-left: 190px;  " for="alarm‏" class="form__label">1 התראה</label>
+        </div><br>
+
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder="התראה" name="Alarm‏" id='alarm‏' required />
+            <label style="color: white; margin-left: 190px;  " for="alarm‏" class="form__label">2 התראה</label>
+        </div><br>
+
+        <div style="margin-top: 170px; margin-left: 140px; color: white;  font-size: 17px; font-family: 'Varela Round';">חזור
+            <span style=" margin-left: 75px; color: white; font-size: 25px;" class="glyphicon glyphicon-ok"></span> 
+            <span style="margin-left: 85px; color: white; font-size: 20px;" class="glyphicon glyphicon-trash"></span>
+        </div>
+        
     </div>
     </div>
     
