--- a/src/app/components/log-in/log-in.component.html
+++ b/src/app/components/log-in/log-in.component.html
@@ -1,17 +1,24 @@
- 
+‏
+  
  <!-- <div class="col-sm-12" style=" height: 750px;  background-color: rgb(1,2,47); "> -->
         <!-- <div style="  width:550px; height: 720px; margin: auto; border: 1px solid rgba(217, 226, 236, 0.877); display: flex; align-items: center; justify-content: center; background-color: rgba(14, 14, 71, 1); "> -->
-        <div class="login" >    
-            <h1>Login</h1><br><br><br><br>
+
+           
+        <div class="login"  style="margin-top: 100px;">    
+            <br><br><br><br><br><br><br><br><br><br><br><br><br>
             <form method="post">  
-                <input style=" padding: 10px 20px; border-radius: 100px; width: 300px; font-size:15px;" 
-                type="text" name="u" placeholder="Username" required="required" />
+                <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+                type="text" name="u" placeholder="שם משתמש" required="required" /><br><br>
 
-                <input style=" padding: 10px 20px; border-radius: 100px; width: 300px; font-size:15px; " 
-                 type="password" name="p" placeholder="Password" required="required" />
+                <input style="margin-left: 600px; text-align: right; padding: 10px 20px; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;"
+                  type="text" name="u" placeholder="סיסמה " required="required" /><br><br>
 
-                <button style=" padding: 10px 20px;  text-align: center; display: inline-block; margin: 4px 2px;cursor: pointer;border-radius: 100px; width: 300px; font-size:15px; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;color: blue;" 
-                 type="submit" class="rounded-left">Log in</button> 
+                  <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+                  type="submit">Google התחברות באמצעות </button> <br><br>
+
+                  <button style="margin-left: 600px; padding: 10px 20px; text-align: center; border-radius: 100px; width: 350px; font-size:15px; font-family: 'Varela Round'; background-color: white; font-size: 17px;" 
+                  type="submit">התחברות </button> 
+            
               
                 <br>
           
