--- a/src/app/components/search-medicine/search-medicine.component.html
+++ b/src/app/components/search-medicine/search-medicine.component.html
@@ -1,17 +1,22 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+
 <div style=" width: 300px;  ">
     <div style="  width:550px; margin-left: 500px; margin-top: 150px;">
 
+      <span style="margin-left: 60px; color: white; font-size: 25px;" class="glyphicon glyphicon-search"></span>
 <body>
 
 <section>
-  <h1>Table Fixed</h1>
   <div class="tbl-header">
     <table cellpadding="0" cellspacing="0">
       <thead>
         <tr>
-          <th>NO</th>
-          <th>NAMA</th>
-          <th>Alamat</th>
+          <th>תאריך תפוגה</th>
+          <th>תאריך כניסה למאגר</th>
+          <th>שם תרופה</th>
         </tr>
       </thead>
     </table>
@@ -20,197 +25,82 @@
     <table cellpadding="0" cellspacing="0">
       <tbody>
         <tr>
-          <td>1</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
+          <td>12/10/2020</td>
+          <td>12/15/2018</td>
+          <td>Jakarta<div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
         </tr>
         <tr>
-          <td>2</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
+          <td>14/15/2025</td>
+          <td>17/02/2021</td>
+          <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
 
         </tr>
         <tr>
-          <td>3</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
+          <td>12/12/2021</td>
+          <td>06/05/2021</td>
+          <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
 
         </tr>
         <tr>
-          <td>4</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
+          <td>17/08/2022</td>
+          <td>05/12/2021</td>
+          <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
          
         </tr>
         <tr>
-          <td>5</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
+          <td>02/01/2018</td>
+          <td>03/09/2017</td>
+          <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
       
         </tr>
         <tr>
-          <td>6</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
+          <td>30/05/2023</td>
+          <td>12/06/2021</td>
+          <td>Surabaya <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: green; width: 15px; height: 15px;"></div></td>
      
         </tr>
         <tr>
-          <td>7</td>
+          <td>18/06/2019</td>
           <td>Wibowo</td>
-          <td>Jogjakarta</td>
+          <td>Jogjakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
    
         </tr>
         <tr>
-          <td>8</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
+          <td>30/12/2021</td>
+          <td>02/08/2021</td>
+          <td>Lampung <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: orange; width: 15px; height: 15px;"></div></td>
        
         </tr>
         <tr>
-          <td>9</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
+          <td>09/07/2022</td>
+          <td>05/02/2021</td>
+          <td>Jakarta <div style="margin-left: 110px; margin-top: -20px; border-radius:50px; background-color: red; width: 15px; height: 15px;"></div></td>
       
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-      
-        </tr>
-        <tr>
-          <td>11</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-       
-        </tr>
-        <tr>
-          <td>12</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-      
-        </tr>
-        <tr>
-          <td>13</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-        
-        </tr>
-        <tr>
-          <td>14</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-        
-        </tr>
-        <tr>
-          <td>15</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-          
-        </tr>
-        <tr>
-          <td>16</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-     
-        </tr>
-        <tr>
-          <td>17</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-       
-        </tr>
-        <tr>
-          <td>18</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-        
-        </tr>
-        <tr>
-          <td>19</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
- 
-        </tr>
-        <tr>
-          <td>20</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-          
-        </tr>
-        <tr>
-          <td>21</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-         
-        </tr>
-        <tr>
-          <td>22</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-         
-        </tr>
-        <tr>
-          <td>23</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-     
-        </tr>
-        <tr>
-          <td>24</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-   
-        </tr>
-        <tr>
-          <td>25</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-        
-        </tr>
-        <tr>
-          <td>26</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-    
-        </tr>
-        <tr>
-          <td>27</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
-         
         </tr>
  
-        <tr>
-          <td>28</td>
-          <td>Suratno</td>
-          <td>Jakarta</td>
-     
-        </tr>
-        <tr>
-          <td>29</td>
-          <td>Suratni</td>
-          <td>Surabaya</td>
-        
-        </tr>
-        <tr>
-          <td>30</td>
-          <td>Wibowo</td>
-          <td>Jogjakarta</td>
        
-        </tr>
-        <tr>
-          <td>31</td>
-          <td>Rusadi</td>
-          <td>Lampung</td>
-        
-        </tr>
+ 
+
       </tbody>
     </table>
   </div>
 </section>
-
 </body>
+
+<div >
+    <div style="margin-left: 75px; height: 3px; width: 120px; background-color: orange;">
+      <div style="margin-left: 175px; height: 3px; width: 60px; background-color: red;"></div>
+      <div style="margin-left: 300px; height: 3px; width: 90px; background-color: green;"></div>
+    </div>
+    
+  <div style="margin-left: 80px; font-family: 'Varela Round'; font-size: 15px; color: white;">התוקף עומד לפוג
+    <div style="margin-left: 175px; margin-top: -20px; font-family: 'Varela Round'; font-size: 15px; color: white;">פג תוקף</div>
+    <div style="margin-left: 300px; margin-top: -20px; font-family: 'Varela Round'; font-size: 15px; color: white;">תקין לשימוש</div>
+  </div>
+</div>
+
+
+
 </div>
 </div>
 
