--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -8,11 +8,12 @@
   <div  style=" height: 730px; widows: 300px;  "class="example-button-row" >
   
     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <div style="color: white;text-align: center; font-size: 25px;" >ברוך הבא ל</div>
-    <div style="color: white;text-align: center; font-size: 25px;" > MEDISCAN</div>
+    
+    <div style="color: white;text-align: center; font-size: 25px;  font-family: 'Varela Round'; " >ברוך הבא ל</div>
+    <div style="color: white;text-align: center; font-size: 25px; font-family: 'Varela Round';" > MEDISCAN</div>
     
     <button style="margin-top: 100px; margin-left: 700px; padding: 10px 20px; border-radius: 100px; width: 150px;" type="button" class="btn">
-      <div style="font-size: 15px; ">להתחלת הפעילות</div>
+      <div style="font-size: 15px; font-family: 'Varela Round'; ">להתחלת הפעילות</div>
 
     </button><br><br>
     <span class="glyphicon glyphicon-bell" style="color: white; font-size:36px; margin-left: 757px; ">  </span><br>
