--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 body{
-    background-image: url("./assets/Pictures/pic2.png");
+    background-image: url("./assets/Pictures/pic.png");
     background-repeat: no-repeat;
 
 }
