--- a/src/app/components/activity-reminders/activity-reminders.component.css
+++ b/src/app/components/activity-reminders/activity-reminders.component.css
@@ -11,9 +11,10 @@
   tbody tr:hover{
   background:rgba(255,255,255,0.1);
     color:#FFFFFF;
+    
   }
   
-
+/* 
    h1{
     font-size: 30px;
     color: #fff;
@@ -21,43 +22,49 @@
     font-weight: 300;
     text-align: center;
     margin-bottom: 15px;
-  }
+   
+  } */
 
   table{
     width:100%;
     table-layout: fixed;
+    font-family: 'Varela Round';
   }
 
   .tbl-header{
     background-color: rgba(255,255,255,0.3);
+ 
    }
 
   .tbl-content{
     /* הגובה של הטבלה */
-    height:300px;
+    height:290px;
     
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
+ 
   }
 
   th{
-    padding: 20px 15px;
-    text-align: left;
+    padding: 15px;
+    text-align: center;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 13px;
     color: #fff;
     text-transform: uppercase;
+ 
   }
   
   td{
     padding: 15px;
-    text-align: left;
+    text-align: center;
     vertical-align:middle;
     font-weight: 300;
     font-size: 12px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.1);
+    
   }
   
   
@@ -65,8 +72,9 @@
 
   body{
     background: transparent;
-    background: transparent;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Varela Round';
+    
+
   }
   section{
     margin: 50px;
@@ -78,20 +86,23 @@
     clear: left;
     text-align: center;
     font-size: 10px;
-    font-family: arial;
+    font-family: 'Varela Round';
     color: #fff;
   }
-  .made-with-love i {
+
+  .made-with-love i { 
     font-style: normal;
     color: #F50057;
     font-size: 14px;
     position: relative;
     top: 2px;
   }
+
   .made-with-love a {
     color: #fff;
     text-decoration: none;
   }
+  
   .made-with-love a:hover {
     text-decoration: underline;
   }
