--- a/src/app/components/details-medicine-take/details-medicine-take.component.html
+++ b/src/app/components/details-medicine-take/details-medicine-take.component.html
@@ -1,30 +1,35 @@
 <div  style="  width: 300px; " class="example-button-row" >
     <div style="  width:550px;  margin: auto; margin-left: 510px; margin-top: 150px;">
     
-        <div  style="margin-left:170px; "  class="form__group field">
-            <input style="width: 200px; text-align: right;" type="text" class="form__field" placeholder="שם התרופה" name="NameMedicine" id='nameMedicine' required />
-            <label style="color: white;  margin-left: 135px;" for="nameMedicine" class="form__label">שם התרופה</label>
-        </div>
+
+        <div  style=" margin-left:135px; margin-top: 150px;"  class="form__group field">
+            <input style="width: 250px; text-align: right; " type="text" class="form__field" placeholder="שם התרופה" name="NameMedicine" id='namemedicine' required />
+            <label style="color: white; margin-left: 175px;  " for="namemedicine" class="form__label">שם התרופה</label>
+        </div><br>
     
-        <div style="margin-left:170px;" class="form__group field">
-            <input style="width: 200px; text-align: right;" type="text" class="form__field" placeholder=" שם הפציינט" name="NamePatient" id='namepatient' required />
-            <label style="color: white;  margin-left: 135px;" for="namepatient" class="form__label">שם הפציינט</label>
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder=" שם הפציינט" name="NamePatient" id='namepatient' required />
+            <label style="color: white; margin-left: 175px;  " for="namepatient" class="form__label">שם הפציינט</label>
+        </div><br>
+
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder=" מספר פעמים ביום" name="Frequency‏" id='frequency‏' required />
+            <label style="color: white; margin-left: 138px;  " for="frequency‏" class="form__label">מספר פעמים ביום</label>
+        </div><br>
+
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder=" מספר פעמים שנותרו" name="LeftDate" id='leftdate' required />
+            <label style="color: white; margin-left: 122px;  " for="leftdate" class="form__label">מספר פעמים שנותרו</label>
+        </div><br>
+
+        <div style="margin-left:135px;" class="form__group field">
+            <input style="width: 250px; text-align: right;" type="text" class="form__field" placeholder=">הערות לאופן הלקיחה" name="Remarks" id='remarks' required />
+            <label style="color: white; margin-left: 120px;  " for="remarks" class="form__label">הערות לאופן הלקיחה</label>
         </div>
-    
-        <div style="margin-left:170px;" class="form__group field">
-            <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="מספר פעמים ביום" name="Frequency‏" id='frequency‏' required />
-            <label style="color: white;  margin-left: 105px; " for="frequency‏" class="form__label">מספר פעמים ביום</label>
-        </div>
-    
-        <div style="margin-left:170px;" class="form__group field">
-            <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="מספר שימים שנותרו" name="LeftDate" id='leftdate' required />
-            <label style="color: white; margin-left: 90px;" for="leftdate" class="form__label">מספר שימים שנותרו</label>
-        </div>
-    
-        <div style="margin-left:170px;" class="form__group field">
-            <input style="width: 200px ; text-align: right;" type="text" class="form__field" placeholder="הערות לאופן הלקיחה" name="Remarks" id='remarks' required />
-            <label style="color: white; margin-left: 87px;" for="remarks" class="form__label">הערות לאופן הלקיחה </label>
-        </div>
+
+
+     
+
     
     </div>
     </div>
