--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.css
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.css
@@ -4,6 +4,7 @@
     padding: 15px 0 0;
     margin-top: 10px;
     width: 50%;
+    
   }
   
   .form__field {
@@ -17,15 +18,18 @@
     padding: 7px 0;
     background: transparent;
     transition: border-color 0.2s;
+    
   }
   .form__field::placeholder {
       color: transparent;
+      
     }
   
   .form__field:placeholder-shown ~ .form__label {
-      font-size: 1.3rem;
+    font-size: 15px;
       cursor: text;
       top: 20px;
+      
   }
   
   
@@ -36,6 +40,7 @@
     transition: 0.2s;
     font-size: 1rem;
     color: #9b9b9b;
+    
   }
   
   .form__field:focus {
@@ -45,6 +50,7 @@
     border-width: 3px;
     border-image: linear-gradient(to right, #11998e,#222222);
     border-image-slice: 1;
+    
   }
   
   .form__field:focus ~ .form__label {
@@ -52,9 +58,10 @@
       top: 0;
       display: block;
       transition: 0.2s;
-      font-size: 1rem;
+      font-size: 1.2rem;
       color: #11998e;
-      font-weight:700;    
+      font-weight:700;  
+        
     }
   /* reset input */
   .form__field:required
@@ -64,12 +71,26 @@
   { box-shadow:none; }
   /* demo */
   body {
-    font-family: 'Poppins', sans-serif; 
+    font-size: 15px;
+    font-family: 'Varela Round';
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
     background-color:#222222;
+    
   }
+
+
+
+
+
+
+  /* check box */
+
+
+
+
+  
