--- a/src/app/components/log-in/log-in.component.css
+++ b/src/app/components/log-in/log-in.component.css
@@ -1,5 +1,5 @@
 /* עיצוב של הלוג אין  */
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 .btn { display: inline-block; *display: inline; *zoom: 1; padding: 4px 10px 4px; margin-bottom: 0; font-size: 13px; line-height: 18px; color: #333333; text-align: center;text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75); vertical-align: middle; background-color: #f5f5f5; background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6); background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6)); background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6); background-image: -o-linear-gradient(top, #ffffff, #e6e6e6); background-image: linear-gradient(top, #ffffff, #e6e6e6); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6, GradientType=0); border-color: #e6e6e6 #e6e6e6 #e6e6e6; border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); border: 1px solid #e6e6e6; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05); cursor: pointer; *margin-left: .3em; }
 .btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
 .btn-large { padding: 9px 14px; font-size: 15px; line-height: normal; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
@@ -55,17 +55,17 @@ input {
   -ms-transition: box-shadow .5s ease;
   transition: box-shadow .5s ease;
 }
-input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); }
+input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgba(255,255,255,0.2); } */
 
 
 
 
 /* ---------------------------------------------------------------------------------------------------- */
 /* עיצוב לכפתור של הגוגל */
-* {box-sizing: border-box}
+/* * {box-sizing: border-box} */
 
 /* style the container */
-.container {
+/* .container {
   position: relative;
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -73,7 +73,7 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 }
 
 /* style inputs and link buttons */
-input,
+/* input,
 .btn {
   width: 100%;
   padding: 12px;
@@ -84,16 +84,16 @@ input,
   display: inline-block;
   font-size: 17px;
   line-height: 20px;
-  text-decoration: none; /* remove underline from anchors */
-}
+  text-decoration: none;
+} */
 
-input:hover,
+/* input:hover,
 .btn:hover {
   opacity: 1;
-}
+} */
 
 /* add appropriate colors to fb, twitter and google buttons */
-.fb {
+/* .fb {
   background-color: #3B5998;
   color: white;
 }
@@ -106,10 +106,10 @@ input:hover,
 .google {
   background-color: #dd4b39;
   color: white;
-}
+} */
 
 /* style the submit button */
-input[type=submit] {
+/* input[type=submit] {
   background-color: #04AA6D;
   color: white;
   cursor: pointer;
@@ -117,35 +117,35 @@ input[type=submit] {
 
 input[type=submit]:hover {
   background-color: #45a049;
-}
+}  */
 
 /* Two-column layout */
-.col {
+/* .col {
   float: left;
   width: 50%;
   margin: auto;
   padding: 0 50px;
   margin-top: 6px;
-}
+} */
 
 /* Clear floats after the columns */
-.row:after {
+/* .row:after {
   content: "";
   display: table;
   clear: both;
-}
+} */
 
 /* vertical line */
-.vl {
+/* .vl {
   position: absolute;
   left: 50%;
   transform: translate(-50%);
   border: 2px solid #ddd;
   height: 175px;
-}
+} */
 
 /* text inside the vertical line */
-.inner {
+/* .inner {
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -153,35 +153,35 @@ input[type=submit]:hover {
   border: 1px solid #ccc;
   border-radius: 50%;
   padding: 8px 10px;
-}
+} */
 
 /* hide some text on medium and large screens */
-.hide-md-lg {
+/* .hide-md-lg {
   display: none;
-}
+} */
 
 /* bottom container */
-.bottom-container {
+/* .bottom-container {
   text-align: center;
   background-color: #666;
   border-radius: 0px 0px 4px 4px;
-}
+} */
 
 /* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 650px) {
+/* @media screen and (max-width: 650px) {
   .col {
     width: 100%;
     margin-top: 0;
-  }
+  } */
   /* hide the vertical line */
-  .vl {
+  /* .vl {
     display: none;
-  }
+  } */
   /* show the hidden text on small screens */
-  .hide-md-lg {
+  /* .hide-md-lg {
     display: block;
     text-align: center;
   }
-}
+} */
 
 
