--- a/src/app/components/search-medicine/search-medicine.component.css
+++ b/src/app/components/search-medicine/search-medicine.component.css
@@ -14,18 +14,19 @@
     }
     
   
-     h1{
+     /* h1{
       font-size: 30px;
       color: #fff;
       text-transform: uppercase;
       font-weight: 300;
       text-align: center;
       margin-bottom: 15px;
-    }
+    } */
   
     table{
       width:100%;
       table-layout: fixed;
+      font-family: 'Varela Round';
     }
   
     .tbl-header{
@@ -42,20 +43,20 @@
     }
   
     th{
-      padding: 20px 15px;
-      text-align: left;
+      padding:  15px;
+      text-align: center;
       font-weight: 500;
-      font-size: 12px;
+      font-size: 15px;
       color: #fff;
       text-transform: uppercase;
     }
     
     td{
       padding: 15px;
-      text-align: left;
+      text-align: center;
       vertical-align:middle;
       font-weight: 300;
-      font-size: 12px;
+      font-size: 13px;
       color: #fff;
       border-bottom: solid 1px rgba(255,255,255,0.1);
     }
@@ -66,7 +67,7 @@
     body{
       background: transparent;
       background: transparent;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Varela Round';
     }
     section{
       margin: 50px;
