המשך של העיצוב המעודכן

--- a/src/app/components/activity-reminders/activity-reminders.component.html
+++ b/src/app/components/activity-reminders/activity-reminders.component.html
@@ -2,6 +2,19 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
+
+
+  <!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
+  <span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+  
  
  <div style=" width: 300px;  ">
     <div style="  width:550px; margin-left: 500px; margin-top: 200px;">
@@ -47,24 +60,33 @@
         </tr>
         <tr>
           <td>3</td>
-          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-          <td>3</td>
-          <td>078546521</td>
+          <td>
+            <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+            <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+          </td>
+          <td>2</td>
+          <td>16:45</td>
+          <td>Acamol</td>
         </tr>
         <tr>
           <td>4</td>
-          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-          <td>6</td>
-          <td>024584544</td>
+          <td>
+            <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+            <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+          </td>
+          <td>7</td>
+          <td>9:00</td>
+          <td>Acamol</td>
         </tr>
         <tr>
           <td>5</td>
-          <td><span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span></td>
-          <td><span style="font-size: 20px;"  class="glyphicon glyphicon-pencil"></span></td>
-          <td>12</td>
-          <td>081231544</td>
+          <td>
+            <span style="font-size: 20px;" class="glyphicon glyphicon-stop"></span>
+            <span style="font-size: 20px; margin-left: 12px;"  class="glyphicon glyphicon-pencil"></span>
+          </td>
+          <td>4</td>
+          <td>12:30</td>
+          <td>Acamol</td>
         </tr>
         <tr>
           <td>6</td>
