--- a/src/app/components/scanne-page/scanne-page.component.html
+++ b/src/app/components/scanne-page/scanne-page.component.html
@@ -8,9 +8,9 @@
 
 
   <!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
-  <span  style=" font-size:26px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+  <span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
   
-<div  style=" height: 730px; widows: 300px;  "class="example-button-row" >
+<div  >
 
   <!-- <input  type = "file" name = "file" id = "file"  class = "inputfile" />
 <div style="color: rgb(255,190,136)"> <input type="file" (change)="upload($event.target.files)" accept="image/*"> </div>
