--- a/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
+++ b/src/app/components/hand-writ-medicine/hand-writ-medicine.component.html
@@ -1,5 +1,14 @@
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+
 <div  style="width: 300px;  "class="example-button-row" >
-<div style="  width:550px; margin: auto; margin-left: 510px; margin-top: 100px; ">
+<div style=" width:550px; margin: auto; margin-left: 510px; margin-top: 65px; ">
 
     <div  style=" margin-left:135px; margin-top: -30px;"  class="form__group field">
         <input style="width: 250px; text-align: right; " type="text" class="form__field" placeholder="שם התרופה" name="NameMedicine" id='namemedicine' required />
