--- a/src/app/components/search-medicine/search-medicine.component.html
+++ b/src/app/components/search-medicine/search-medicine.component.html
@@ -2,9 +2,18 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<!-- <div style="border-radius:50px; width: 15px; height: 15px; background-color: white; border-style: unset; border-color: orangered; "></div> -->
+<span  style=" font-size:22px; color:white; margin-top: 45px; margin-left: 900px;" class="glyphicon glyphicon-user"></span> ‏
+
 
 <div style=" width: 300px;  ">
-    <div style="  width:550px; margin-left: 500px; margin-top: 150px;">
+    <div style="  width:550px; margin-left: 500px; margin-top: 100px;">
 
       <span style="margin-left: 60px; color: white; font-size: 25px;" class="glyphicon glyphicon-search"></span>
 <body>
